# uq_seminars

./: .gitignore  Dockerfile  compose.yaml
backend/: mypy.ini  pyproject.toml
backend/backend/: main.py
