[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vladimir <me.morozovvp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
pymongo = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
backend = 'backend.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
